--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 
 body{
   background-color: rgb(17, 205, 142);
-
+  min-width: 410px;
   
 }
 
@@ -359,12 +359,23 @@ body{
   color: rgb(17, 205, 142);
   text-transform: uppercase;
   flex-direction: row;
+  text-overflow: ellipsis;
+}
+
+.tuyenPreview p{
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 1;      /* số dòng muốn hiển thị */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 #maTuyenLuu {
   color: red;
 }
-
 .Table {
   display: flex;
   justify-content: center;
@@ -378,6 +389,7 @@ body{
   table-layout: fixed;
   margin: 15px;
   text-transform: uppercase;
+  table-layout: auto;
   color: rgb(17, 205, 142);
 }
 
@@ -388,6 +400,14 @@ body{
   padding: 5px;
   text-align: center;
 }
+
+.cell {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
 
 .thongTin {
   flex-direction: column;
