fix loi nut chay chu nhan 2 lan va them 1 so tinh nang nho nhu thay doi mau cua cac nut chon mode

--- a/css/input.css
+++ b/css/input.css
@@ -13,7 +13,9 @@ body {
 
 }
 
-
+a{
+  text-decoration: none;
+}
 
 @media screen and (max-width: 1024px) {
   body{
@@ -76,6 +78,7 @@ body {
   background-color: white;
   border-radius: 20px;
   max-width: auto;
+  flex-wrap: wrap;
 }
 
 .NutBam button {
