--- a/css/input.css
+++ b/css/input.css
@@ -23,6 +23,52 @@ a{
   }
 }
 
+#toast-container {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    z-index: 9999;
+}
+
+.toast {
+    display: flex;
+    align-items: center;
+    padding: 15px 25px;
+    border-radius: 8px;
+    color: white;
+    font-family: Averta-Std-CY;
+    font-weight: 500;
+    min-width: 300px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    animation: slideIn 0.4s ease forwards;
+}
+
+/* Màu sắc từng loại */
+.success { background-color: rgba(66, 113, 163); }
+.error   { background-color: #eb4d4b; }
+
+/* Icon style */
+.toast i {
+    margin-right: 15px;
+    font-size: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Hiệu ứng trượt từ phải sang */
+@keyframes slideIn {
+    from { transform: translateX(100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 1; }
+}
+
 .Nhap {
   /* display: flex;
   flex-wrap: wrap;
@@ -43,12 +89,12 @@ a{
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin: 30px;
+  /* margin: 30px; */
   background-color: white;
   border-radius: 5px;
   opacity: 0.9;
   
-  border: 2px solid rgb(17, 205, 142);
+  border: 2px solid rgba(66, 113, 163);
 }
 
 
@@ -66,8 +112,8 @@ a{
   justify-content: center;
   align-items: center;
   flex-direction: column; /* dọc mặc định (cho màn hình dọc) */
-  gap: 15px;
-  padding: 10px;
+  /* gap: 15px; */
+  padding: 20px;
 }
 
 
@@ -91,7 +137,7 @@ a{
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  background: rgb(17, 205, 142);
+  background: rgba(66, 113, 163);
   color: #fff;
   transition: none;
   border: none;
@@ -101,11 +147,17 @@ a{
   font-family: Averta-Std-CY;
 }
 
+.NutBam button:hover{
+  border-style: solid;
+  border-color: rgb(17, 0, 255);
+  border-width: 2px;
+}
+
 .InputLabel {
   width: max-content;
   font-family: Averta-Std-CY;
   font-size: 20px;
-  color: rgb(17, 205, 142);
+  color: rgba(66, 113, 163);
   text-transform: uppercase;
 }
 
@@ -113,7 +165,7 @@ a{
 input[type="text"] {
   min-width: 500px;
   border: none;
-  border-bottom: 2px solid rgb(17, 205, 142);
+  border-bottom: 2px solid rgba(66, 113, 163);
   font-family: "Courier New", Courier, monospace;
   font-size: 20px;
   font-weight: bold;
